compiler/testData/diagnostics/tests/enum/inheritFromEnumEntry.fir.kt
enum class E {
    ENTRY
}

class A : <!ENUM_ENTRY_AS_TYPE!>E.ENTRY<!>
